--- a/style.css
+++ b/style.css
@@ -14,3 +14,10 @@ font-size: 20px;
                  color: black;       
                  font-size: 15px;    
 }
+
+
+.css-hxt7ib {
+  padding-top: 0rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
